<resources>
    <string name="app_name">Food Randomizer</string>
    <string name="openDrawer"></string>
    <string name="closeDrawer"></string>
    <string name="title">food randomizer</string>
    <string name="cari">Cari</string>
    <string name="makan">Mau makan apa hari ini?</string>
    <string name="menu_page_title">Menu List</string>
    <string name="new_menu_title">Add New Menu</string>
    <string name="menu_name">Menu Name: </string>
    <string name="menu_desc">Menu Desc: </string>
    <string name="menu_bahan">Bahan: </string>
    <string name="menu_langkah">Langkah Memasak: </string>
    <string name="menu_restoran">Tersedia di Restoran: </string>
    <string name="add_new">Add New Menu</string>
    <string name="settings_title">Settings Page</string>
    <string name="modeDark">Dark</string>
    <string name="modeLight">Light</string>
    <string name="modeDefault">System Default</string>
    <string name="input_hint"><font size="12">input separated by newline</font></string>
    <string name="delete">Delete</string>
    <string name="save">Save and Close</string>
    <string name="menu_details_title">Menu Details</string>
    <string name="pencarian_menu">Search Menu by "Name"</string>
    <string name="pencarian_bahan">Search Menu by "Bahan"</string>
    <string name="empty"><font size="12">empty...</font></string>
    <string name="history_page_title">History</string>
    <string name="clear">clear</string>
    <string name="delete_hint">tap to delete</string>
    <string name="history_hint">Search by menu name</string>
</resources>