<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menu_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril"
        android:padding="45px"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/settings_title"
        android:textSize="40dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="40px">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="26sp"
                    android:padding="20px"
                    android:text="Dark Mode" />

                <RadioGroup
                    android:id="@+id/dark_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/dark_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/modeLight"
                        android:fontFamily="@font/ubuntu"/>

                    <RadioButton
                        android:id="@+id/dark_yes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/modeDark"
                        android:fontFamily="@font/ubuntu"/>

                    <RadioButton
                        android:id="@+id/dark_default"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/modeDefault"
                        android:fontFamily="@font/ubuntu"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_button"
        android:text="Save"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/save"/>

</LinearLayout>